<resources>
    <string name="app_name">pr5</string>
    <string name="e_mail">E-mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="entrar">ENTRAR</string>
    <string name="name">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="nick">Nick</string>
    <string name="cellphone">Número de teléfono</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="edad">Edad</string>
    <string name="drivinglicense">Carné de conducir</string>
    <string name="registrarse">Registrarse</string>
    <string name="metpagop">Modificar métodos de pago</string>
    <string name="icregcomp">Registro completado</string>
    <string name="icadduser">Icono de añadir usuario</string>
    <string name="regcomp">El usuario ha sido creado satisfactoriamente</string>
    <string name="otheruser">Entrar con otra cuenta</string>
    <string name="butcard">Modificar métodos de pago</string>
    <string name="carcard">Modificar vehículos</string>
    <string name="cocherin">Icono de coche</string>
    <string name="busviaje">Buscar viaje</string>
    <string name="anaviaje">Añade viaje</string>
    <string name="title_activity_anadir_viaje">anadirViaje</string>
    <string name="title_activity_prueba1">prueba1</string>
    <string name="iconmd">Icono del perfil en el material design</string>
    <string name="notificamatdesign">Notificaciones</string>
    <string name="metpagmatdesign">Métodos de pago</string>
    <string name="ajustesmatdesign">Ajustes</string>
    <string name="sobrematdesign">Sobre la app</string>
    <string name="ayudamatdesign">Ayuda</string>
    <string name="tutorialmatdesign">Tutorial</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="dirsalida">Dirección Salida</string>
    <string name="fechSalida">Fecha Salida</string>
    <string name="fechllegada">Fecha Prevista de Llegada</string>
    <string name="coche">Coche</string>
    <string name="plazaDisp">Plazas Disponibles</string>
    <string name="precio">Precio</string>
    <string name="tipoViaje">Tipo de Viaje</string>
    <string name="nombreUsuario">Nick</string>
    <string name="icomatdesign">Icono material design dentro del menú principal</string>
    <string name="iconosobreapp">Icono dentro de Sobre la app</string>
    <string name="contentsobrenosotros">App desarrollada por Rubén Herrero y Pablo Ahíta</string>
    <string name="ajustestitulo">Ajustes</string>
    <string name="bienvenida">Bienvenido a la aplicación</string>
    <string name="pulsaelboton">Esta aplicación ha sido creada por Pablo Ahita y Rubén Herrero. Pulsa el botón para continuar</string>
    <string name="icotarjeta">Icono tarjeta de crédito</string>
    <string name="addmetodopago">Añadir método de pago</string>
    <string name="anadecoche">Añadir coche</string>
    <string name="pregunta1">¿Cómo cambio la contraseña?</string>
    <string name="pregunta2">¿Qué hago si no llega mi conductor?</string>
    <string name="pregunta3">¿Cómo cancelo el viaje?</string>
    <string name="llamar">Llamar</string>
    <string name="enviaemail">Enviar un mail</string>
    <string name="visitanos">Visita nuestra Página</string>
    <string name="feedback">Feedback</string>
    <string name="pregfrecuentes">Preguntas Frecuentes</string>
    <string name="contactanos">Contáctanos</string>
    <string name="rayitas">----------------------------------------------------------------------------------------------------------</string>
    <string name="escribe">Escriba aquí</string>
    <string name="quenecesitas">¿Qué necesitas?</string>
    <string name="enviar">Enviar</string>
    <string name="chats">CHATS</string>
    <string name="paypal">PayPal</string>
    <string name="banco">Banco</string>
    <string name="titular">Titular de la cuenta</string>
    <string name="iban">Nº de cuenta IBAN</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string name="year">Año</string>
    <string name="asientostotales">Asientos totales</string>
    <string name="asientosdisponibles">Asientos disponibles</string>
    <string name="todo">TODO</string>
</resources>
